force-app/main/default/objects/Account/fields/Overdue_Invoice_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Invoice_Revenue__c</fullName>
    <label>Overdue Invoice Revenue</label>
    <summarizedField>Invoice_Example__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Example__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>