force-app/main/default/objects/Account/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <label>Patient Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>