force-app/main/default/objects/Account/fields/Patient_Event_Key__c.field-meta.xml
<CustomField>
    <fullName>Patient_Event_Key__c</fullName>
    <description>Unique key field to trigger IoT orchestration for Charles Green use case</description>
    <label>Patient Event Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>