force-app/main/default/objects/Account/fields/PCP__c.field-meta.xml
<CustomField>
    <fullName>PCP__c</fullName>
    <label>PCP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>