force-app/main/default/objects/Account/fields/Percent_Won__c.field-meta.xml
<CustomField>
    <fullName>Percent_Won__c</fullName>
    <formula>Closed_Won_Opptys__c / ( Closed_Lost_Opptys__c +  Closed_Won_Opptys__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>