force-app/main/default/objects/Account/fields/PFName__c.field-meta.xml
<CustomField>
    <fullName>PFName__c</fullName>
    <label>PFName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>