force-app/main/default/objects/Account/fields/Physician_Sharing_Preference__c.field-meta.xml
<CustomField>
    <fullName>Physician_Sharing_Preference__c</fullName>
    <label>Physician Sharing Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>