force-app/main/default/objects/Account/fields/Physicians__c.field-meta.xml
<CustomField>
    <fullName>Physicians__c</fullName>
    <description># of Physicians</description>
    <label>Physicians</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>