force-app/main/default/objects/Account/fields/Place_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Service</label>
    <referenceTo>Place_of_Service__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>