force-app/main/default/objects/Account/fields/PLName__c.field-meta.xml
<CustomField>
    <fullName>PLName__c</fullName>
    <label>PLName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>