force-app/main/default/objects/Account/fields/Preferred_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pharmacy__c</fullName>
    <label>Preferred Pharmacy</label>
    <length>120</length>
    <type>Text</type>
</CustomField>