force-app/main/default/objects/Account/fields/Preferred_Pharmacy_Address__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pharmacy_Address__c</fullName>
    <label>Preferred Pharmacy Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>