force-app/main/default/objects/Account/fields/Preferred_Refill_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Refill_Type__c</fullName>
    <label>Preferred Refill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail Order</fullName>
            </value>
            <value>
                <fullName>Pharmacy Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>