force-app/main/default/objects/Account/fields/Prim_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Prim_Insurance_Provider__c</fullName>
    <label>Prim Insurance Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Blue Cross</fullName>
            </value>
            <value>
                <fullName>United</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>