force-app/main/default/objects/Account/fields/Producer_Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Producer_Agency_ID__c</fullName>
    <label>Producer / Agency ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>