force-app/main/default/objects/Account/fields/Producer_Book_Size__c.field-meta.xml
<CustomField>
    <fullName>Producer_Book_Size__c</fullName>
    <label>Producer Book Size</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>