force-app/main/default/objects/Account/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reseller Program</fullName>
            </value>
            <value>
                <fullName>Services Program</fullName>
            </value>
            <value>
                <fullName>Referral Program</fullName>
            </value>
            <value>
                <fullName>Worldwide Reseller Agreement</fullName>
            </value>
            <value>
                <fullName>Consulting Program</fullName>
            </value>
            <value>
                <fullName>Distributor Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>