force-app/main/default/objects/Account/fields/Projected_Sales_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales_This_Year__c</fullName>
    <label>Projected Sales This Year</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>