force-app/main/default/objects/Account/fields/Projected_Units_this_Year__c.field-meta.xml
<CustomField>
    <fullName>Projected_Units_this_Year__c</fullName>
    <label>Projected Units this Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>