force-app/main/default/objects/Account/fields/PSalutation__c.field-meta.xml
<CustomField>
    <fullName>PSalutation__c</fullName>
    <label>PSalutation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>