force-app/main/default/objects/Account/fields/RC_Keywords__c.field-meta.xml
<CustomField>
    <fullName>RC_Keywords__c</fullName>
    <description>Keyword list used by the Relevant Content package. It is recommended that this field is NOT added to the page layout. To add fields containing keywords, edit this formula field to include additional fields separated by spaces.</description>
    <formula>Name + &quot; &quot; + TEXT(Industry)</formula>
    <inlineHelpText>Relevant keywords for this record</inlineHelpText>
    <label>RC_Keywords</label>
    <type>Text</type>
</CustomField>