force-app/main/default/objects/Account/fields/Reference_Account__c.field-meta.xml
<CustomField>
    <fullName>Reference_Account__c</fullName>
    <label>Reference Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Developing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>