force-app/main/default/objects/Account/fields/Retention_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Retention_Last_Year__c</fullName>
    <label>Retention Last Year:</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>