force-app/main/default/objects/Account/fields/rrpu__Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>rrpu__Alert_Message__c</fullName>
    <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
    <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
    <label>Alert Message</label>
    <type>TextArea</type>
</CustomField>