force-app/main/default/objects/Account/fields/Sales_LTD__c.field-meta.xml
<CustomField>
    <fullName>Sales_LTD__c</fullName>
    <inlineHelpText>Summarizes all opportunities placed into this account.</inlineHelpText>
    <label>Sales LTD</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>