force-app/main/default/objects/Account/fields/Sales_Order_Trend__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Trend__c</fullName>
    <label>Sales Order Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>