force-app/main/default/objects/Account/fields/Sales_to_Projected__c.field-meta.xml
<CustomField>
    <fullName>Sales_to_Projected__c</fullName>
    <formula>IF (Projected_Sales_This_Year__c &gt; 0, Sales_LTD__c / Projected_Sales_This_Year__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales % to Projected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>