force-app/main/default/objects/Account/fields/Service_Region__c.field-meta.xml
<CustomField>
    <fullName>Service_Region__c</fullName>
    <description>Payers</description>
    <label>Service Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>