force-app/main/default/objects/Account/fields/Shift_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Shift_Handoff__c</fullName>
    <label>Shift Handoff</label>
    <type>Url</type>
</CustomField>