force-app/main/default/objects/Account/fields/ShippingGeo__c.field-meta.xml
<CustomField>
    <fullName>ShippingGeo__c</fullName>
    <label>ShippingGeo</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>