force-app/main/default/objects/Account/fields/Show_on_Checkin_Map__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Checkin_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Checkin Map</label>
    <type>Checkbox</type>
</CustomField>