force-app/main/default/objects/Account/fields/sma__MAAssignmentRule__c.field-meta.xml
<CustomField>
    <fullName>sma__MAAssignmentRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MapAnything Assignment Rule</label>
    <referenceTo>sma__MAAssignmentRule__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>