force-app/main/default/objects/Account/fields/SMS_Preference__c.field-meta.xml
<CustomField>
    <fullName>SMS_Preference__c</fullName>
    <label>SMS Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>