force-app/main/default/objects/Account/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speaker</label>
    <type>Checkbox</type>
</CustomField>