force-app/main/default/objects/Account/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Diabetes &amp; Endocrine Disorders</fullName>
            </value>
            <value>
                <fullName>Ear, Nose, &amp; Throat</fullName>
            </value>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>