force-app/main/default/objects/Account/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <description>Threats</description>
    <label>Threats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>