force-app/main/default/objects/Account/fields/Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed__c</fullName>
    <label>Total Billed</label>
    <summarizedField>RM_Referral__c.RM_Billed_Amount__c</summarizedField>
    <summaryForeignKey>RM_Referral__c.Physician_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>