force-app/main/default/objects/Account/fields/Total_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Total_Referrals__c</fullName>
    <label>Total Referrals</label>
    <summaryForeignKey>RM_Referral__c.Physician_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>