force-app/main/default/objects/Account/fields/Units_to_Projected__c.field-meta.xml
<CustomField>
    <fullName>Units_to_Projected__c</fullName>
    <formula>IF ( Projected_Units_this_Year__c &gt; 0 , Units_YTD__c / Projected_Units_this_Year__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units % to Projected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>