force-app/main/default/objects/Account/fields/Units_YTD__c.field-meta.xml
<CustomField>
    <fullName>Units_YTD__c</fullName>
    <label>Units YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>