force-app/main/default/objects/Account/fields/Value_Open_Opportunties__c.field-meta.xml
<CustomField>
    <fullName>Value_Open_Opportunties__c</fullName>
    <label>Value of Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>