force-app/main/default/objects/Account/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <description>Weaknesses</description>
    <label>Weaknesses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>